--- a/PescAR/app/src/main/res/values/strings.xml
+++ b/PescAR/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">PescAR</string>
-    <string name="point_your_phone_down">Point your phone down at an empty space, and move it around slowly</string>
-    <string name="tap_anywhere_to_add_model">Tap anywhere to add model</string>
-    <string name="cast_fishing_rod">Swing your phone forward to cast your fishing rod!</string>
-    <string name="pull_fishing_rod">Swing your phone backwards to catch the fish!</string>
+    <string name="point_your_phone_down">Point your phone down at an empty space, and move it around slowly\nWhen you\'ll see a grid, tap on it to place the lake</string>
+    <string name="tap_anywhere_to_add_model"></string>
+    <string name="my_collection">If you click on the button on the bottom left you can go to your personal collection of fishes!\nThere you can watch all of the fishes you\'ve got!</string>
+    <string name="lures">On the bottom right you\'ll find the lures!\nEach of them has a different affect on the fish you\'ll catch, try them out!</string>
+    <string name="cast_fishing_rod">Now you can cast your fishing rod!\nTo do so you can swing your phone forward or you can also swipe upward on the screen!</string>
+    <string name="pull_fishing_rod">Something is there!\nSwing your phone backwards or make a long press on the lake to catch the fish!</string>
     <string name="lure1_name">Simple lure</string>
     <string name="lure1_description">A common lure used for a common fish</string>
     <string name="lure2_name">Colorful lure</string>
@@ -12,5 +14,7 @@
     <string name="lure3_description">Increase the chance to get an abyssal type fish</string>
     <string name="lure4_name">Golden lure</string>
     <string name="lure4_description">Increase the chance to get a legendary fish</string>
+    <string name="catch_screen">You\'ve caught something!\nYou can find the fish name and it\'s ID in the upper part of the card!\nTap on the card to check it out, otherwise tap outside of it to continue your fishing!</string>
+    <string name="place_grid" />
 
 </resources>
